@@ -1,3 +1,9 @@
+2008-6-4  Yu-Sung Su     <ys463@columbia.edu>  
+    * DESCRIPTION (Version, Date): 1.1-6.
+    * R/traceplot:
+      1. make it a generic
+      2. traceplot.bugs --> S4 method
+
 2008-5-1  Yu-Sung Su     <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 1.1-5.
 
